fix post sharing spacing

--- a/_sass/components/_share.scss
+++ b/_sass/components/_share.scss
@@ -1,5 +1,5 @@
 .share-container {
-  max-resolution: 50px;;
+  margin-top: 50px;
   padding: 5px $gutter 40px;
   position: relative;
 
